tests/unit/default/syntax-error/032-create-table-parens-name-colon-type-parens-nums-parens.x.t
---- IN ----
+%table(id:decimal(10,2)|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...ble(id:decimal(10,2)` near `|` at position 24 - at line 1
---- EXIT ----
1
